--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
         <h2>Как связаться со мной</h2>
         <a href="https://vk.com/nastineq">ВКонтакте</a><br>
         <img
-        src="C:\Users\Anastasia\Desktop\kitty.jpg"
+        src="https://github.com/nastasja-veg/Lab-1/blob/353662bb69c643f1a3b1f7533d4225249975ee5e/kitty.jpg"
         alt="kitty"
         width="200"
         style="margin-top: 20px;"
         />
     </body>
+
 </html>
