--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>Как связаться со мной</h2>
         <a href="https://vk.com/nastineq">ВКонтакте</a><br>
         <img
-        src="https://github.com/nastasja-veg/Lab-1/blob/353662bb69c643f1a3b1f7533d4225249975ee5e/kitty.jpg"
+        src="docs/kitty.jpg"
         alt="kitty"
         width="200"
         style="margin-top: 20px;"
@@ -83,3 +83,4 @@
     </body>
 
 </html>
+
