--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <p>Меня зовут Анастасия, мне 22 года. Я родилась в <b>Саратове</b>, но уже давно живу в Самаре. Языки - моя стихия. Я говорю на английском, немецком, испанском, французский же медленно забываю. Несмотря на любовь к языкам, я два года проучилась в Санкт-Петербурге на историческом факультете. <i>Теперь, надеюсь, я на своём месте.</i></p>
         <p>Помимо языков, я всегда любила видео, поэтому уже много лет занимаюсь <b>монтажом</b>. <del>Когда хочется ещё больше загнаться</del> Когда голове нужно отдохнуть, обращаюсь за помощью к скрапбукингу, но отключить мысли не всегда получается - коллаж ведь должен быть красивым!</p>
         <p>С большим интересом отношусь и к компьютерным играм, например, <i>The Sims</i>, <i>Resident Evil</i> и, конечно, легенде мира гейминга - <i>Minecraft</i>.</p>   
-        <h2>Какие фильмы мне нравятся</h2>
+        <h2>Какие сериалы мне нравятся</h2>
         <ul>
-            <li><cite>"мама!"</cite> (2017)</li>
-            <li><cite>"Чёрный лебедь"</cite></li>
-            <li><cite>"Джиа"</cite></li>
-            <li><cite>"Сияние"</cite></li>
+            <li><cite>"Офис"</cite></li>
+            <li><cite>"Доктор Хаус"</cite></li>
+            <li><cite>"Бруклин 9-9"</cite></li>
+            <li><cite>"Шершни"</cite></li>
         </ul>
         <small>Я больше по сериалам...</small>
         <h2>Какая музыка мне нравится</h2>
@@ -73,6 +73,7 @@
                 And handled with a Chain.
             </i></blockquote>
         <h2>Как связаться со мной</h2>
+        <a href="https://t.me/ircnomtsec">Telegram</a><br>
         <a href="https://vk.com/nastineq">ВКонтакте</a><br>
         <img
         src="docs/kitty.jpg"
@@ -83,4 +84,5 @@
     </body>
 
 </html>
+
 
